# Senti

./: .gitignore  ARCHITECTURE.md  AUDIO_ARCHITECTURE.md  AUDIT_REPORT.md  AUTH_FLOW.md  README.md  REDDIT.md  SENTI_AUDIT.md  SOUND_EFFECT_AUDIT.md  VERIFICATION_REPORT.md  package-lock.json  scan_unicode.ps1
.githooks/: pre-commit
backend/: create_speech.py  final_test.py  gen_test_audio.py  record_speech.py  test_transcribe.py  test_whisper.py
backend/server/: main.py
credential-provider/: CMakeLists.txt  README.md  SentiCredentialProvider.def  register.reg
credential-provider/src/: Common.h  Dll.cpp  Guid.h  SentiCredential.cpp  SentiCredential.h  SentiProvider.cpp  SentiProvider.h
dashboard/: .env.example  .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AuthCard.tsx  DeleteVoiceprintButton.tsx  DevicesManager.tsx  RemoteView.tsx  SecurityModeSelector.tsx  SecurityPolicyEditor.tsx  SentiMark.tsx  SiteFooter.tsx  SiteHeader.tsx  VoiceSensitivity.tsx  WaitlistForm.tsx  ui.tsx  usePolicy.ts
dashboard/lib/: auth.ts  crypto.ts  db.ts  deviceAuth.ts  gemini.ts  greeting.ts  llm.ts  mockData.ts  policy.ts  prisma.ts  ratelimit.ts  tts.ts  user.ts
dashboard/prisma/: schema.prisma
dashboard/scripts/: check-env.mjs
desktop/: .env.example  CLAP_DETECTION_MVP.md  UNLOCK_TRAINING_ARCHITECTURE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/.next/: trace  trace-build
(+129 files in other folders)
